<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/big_padding">

    <EditText
        android:id="@+id/edit_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_title"
        android:padding="@dimen/small_padding"
        style="@style/editTitle" />

    <TextView
        android:id="@+id/characterLengthLimitText"
        style="@style/characterLengthLimit"
        android:visibility="gone"
        android:text="@string/max_characters_long"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <EditText
        android:id="@+id/edit_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="@dimen/description_box_min_height"
        android:hint="@string/hint_description"
        style="@style/editDescription"
        android:padding="@dimen/small_padding" />

    <Button
        android:id="@+id/button_save"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/button_background"
        android:text="@string/button_save"
        android:textStyle="bold"
        android:layout_gravity="center_horizontal"
        android:textColor="@android:color/black" />

</LinearLayout>